--- a/Source/RMG/UserInterface/Dialog/SettingsDialog.ui
+++ b/Source/RMG/UserInterface/Dialog/SettingsDialog.ui
@@ -124,6 +124,13 @@
                 </widget>
                </item>
                <item>
+                <widget class="QCheckBox" name="autoStartNetplayOnStartupCheckBox">
+                 <property name="text">
+                  <string>Start netplay automatically on application start</string>
+                 </property>
+                </widget>
+               </item>
+               <item>
                 <spacer name="verticalSpacer_6">
                  <property name="orientation">
                   <enum>Qt::Orientation::Vertical</enum>
