--- a/Source/RMG/UserInterface/Dialog/SettingsDialog.ui
+++ b/Source/RMG/UserInterface/Dialog/SettingsDialog.ui
@@ -569,6 +569,30 @@
                 </layout>
                </item>
                <item>
+                <layout class="QHBoxLayout" name="horizontalLayout_22">
+                 <item>
+                  <widget class="QLabel" name="label_19">
+                   <property name="text">
+                    <string>Max chat messages</string>
+                   </property>
+                  </widget>
+                 </item>
+                 <item>
+                  <widget class="QSpinBox" name="osdMaxMessagesSpinBox">
+                   <property name="suffix">
+                    <string> messages</string>
+                   </property>
+                   <property name="minimum">
+                    <number>1</number>
+                   </property>
+                   <property name="maximum">
+                    <number>50</number>
+                   </property>
+                  </widget>
+                 </item>
+                </layout>
+               </item>
+               <item>
                 <spacer name="verticalSpacer_17">
                  <property name="orientation">
                   <enum>Qt::Orientation::Vertical</enum>
@@ -614,10 +638,13 @@
                     <number>1</number>
                    </property>
                    <property name="text">
-                    <string>The On-Screen Display will only work with OpenGL video plugins</string>
+                    <string>The On-Screen Display will only work with OpenGL video plugins. These settings also apply to in-game Kaillera chat messages.</string>
                    </property>
                    <property name="textFormat">
                     <enum>Qt::TextFormat::PlainText</enum>
+                   </property>
+                   <property name="wordWrap">
+                    <bool>true</bool>
                    </property>
                   </widget>
                  </item>
